<resources>
    <string name="app_name">NytOut</string>

    <string name="menu_item_about">About</string>
    <string name="menu_item_artists">Artists</string>
    <string name="menu_item_events">Events</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_location">Location</string>
    <string name="menu_item_offers">Offers</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_filters">Filters</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_current_location">Current Location</string>
    <string name="menu_item_other_location">Gamla Stan</string>

    <string name="business_name">Business Name</string>
    <string name="business_image">Business Image</string>

    <string name="menu_button">Menu_button</string>
    <string name="location_button">Location_button</string>
    <string name="favorites_button">Favorites_button</string>
    <string name="filters_button">Filters_button</string>
    <string name="home_button">Home_button</string>
    <string name="offers_button">Offers_button</string>
    <string name="events_button">Events_button</string>
    <string name="artists_button">Artists_button</string>

    <string name="search_hint">Search...</string>

    <string name="google_api_key">AIzaSyBZ6q52UgwvyGKRf2fys2jJ3OOc1HCzNs0</string>

    <string name="service_not_available">No geocoder available – The background geocoding service is not available due to a network error or IO exception.</string>
    <string name="no_geocoder_available">No geocoder available – The background geocoding service is not available due to a network error or IO exception.</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used – The latitude and/or longitude values that are provided in the Location object are invalid.</string>
    <string name="no_address_found">Sorry, no address found – The geocoder can\'t find an address for the given latitude/longitude.</string>
    <string name="address_found">Address Found!!! - No location data provided – The intent extras do not include the Location object that is required for reverse geocoding.</string>
    
</resources>
