<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/popup_menu_item_favorites"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/menu_item_favorites"
        app:showAsAction="never"
        android:orderInCategory="10">
    </item>
    <item
        android:id="@+id/popup_menu_item_profile"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/menu_item_profile"
        app:showAsAction="never"
        android:orderInCategory="10">
    </item>
    <item
        android:id="@+id/popup_menu_item_settings"
        android:icon="@drawable/ic_settings_white_48dp"
        android:title="@string/menu_item_settings"
        app:showAsAction="never"
        android:orderInCategory="15">
    </item>
    <item
        android:id="@+id/popup_menu_item_about"
        android:icon="@drawable/ic_star_half_black_48dp"
        android:title="@string/menu_item_about"
        app:showAsAction="never"
        android:orderInCategory="16">
    </item>
</menu>