<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_widget"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

        <LinearLayout
            android:id="@+id/action_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/menu_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/menu_button"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu_white_24dp" />
            <!--
            <android.support.v7.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_gravity="center"
                app:iconifiedByDefault="false"
                app:searchIcon="@drawable/ic_search_white_24dp"
                app:closeIcon="@drawable/ic_close_white_24dp"
                app:queryHint="@string/search_hint"/>
-->
            <ImageButton
                android:id="@+id/location_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/location_button"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_location_on_white_24dp" />
            <ImageButton
                android:id="@+id/favorites_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorites_button"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_favorite_white_24dp" />
            <ImageButton
                android:id="@+id/filters_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/filters_button"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_filter_list_white_24dp" />

        </LinearLayout>

        <com.miguelcatalan.materialsearchview.MaterialSearchView
            android:id="@+id/material_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

        </com.aurelhubert.ahbottomnavigation.AHBottomNavigation>

    </FrameLayout>

</LinearLayout>